test/fails/bad_generics/bounds1.lgl
with bool T: T &&(T x, T y);

with float[2] T: 
bool f(T x) {
    return x && true; // Doesn't typecheck
}

void main() {
    print 1;
}